deployments/monitoring/fromhelm/3_grafana.yml
---
# Source: grafana/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitoring-grafana
    chart: "grafana-0.6.1"
    component: "grafana"
    heritage: "Tiller"
    release: "monitoring"
  name: monitoring-grafana
spec:
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 3000
      nodePort:  30908  
  selector:
    app: monitoring-grafana
    component: "grafana"
  type: "NodePort"
---
# Source: grafana/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: monitoring-grafana
    chart: "grafana-0.6.1"
    component: "grafana"
    heritage: "Tiller"
    release: "monitoring"
  name: monitoring-grafana
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/config: 7095e97c46631bc602c5c8e589488b24e03446f7c54d8f0a5a54eaf52ace69b2
        checksum/dashboards-config: c62bfee2444e23ecf2cb3e23eef96d30717718bcdabfed6379c8219b51b42d96
      labels:
        app: monitoring-grafana
        component: "grafana"
        release: "monitoring"
    spec:
      nodeSelector:
        {}
        
      containers:
        - name: grafana
          image: "grafana/grafana:5.3.2"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 30
            
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            
          volumeMounts:
            - name: config-volume
              mountPath: "/etc/grafana"
            - name: dashboard-volume
              mountPath: "/var/lib/grafana/dashboards"
            - name: storage-volume
              mountPath: "/var/lib/grafana"
              subPath: ""
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: monitoring-grafana-config
        - name: dashboard-volume
          configMap:
            name: monitoring-grafana-dashs
        - name: storage-volume
          persistentVolumeClaim:
            claimName: grafana-storage-nfs-pvc
