deployments/monitoring/fromhelm/4_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress-nginx
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: reverse-proxy
spec:
  # tls:
  # # This assumes tls-secret exists.
  # - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /monitoring/grafana
          backend:
            serviceName: monitoring-grafana
            servicePort: 80
